--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<head>
-  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-  <script>
-    var gitalk = new Gitalk({
-	clientID: 'bead3df2199fe5ec763e',
-	clientSecret: '2fa88ec78bd3b5a90c0abe8e68f0d31e4088ab1e',
-	repo: 'emacoyo.github.io',
-	owner: 'emacoyo',
-	admin: ['emacoyo'],
-	id: location.pathname,      // Ensure uniqueness and length less than 50
-	distractionFreeMode: false  // Facebook-like distraction free mode
-    })
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+<h1>hello github</h1>
+<div id="gitalk-container"></div>
 
-    gitalk.render('gitalk-container')
-  </script>
-</head>
-<body>
-  hello github
-  <div id="gitalk-container"></div>
-</body>
+<script type="text/javascript">
+
+  var gitalk = new Gitalk({
+      clientID: 'bead3df2199fe5ec763e',
+      clientSecret: '2fa88ec78bd3b5a90c0abe8e68f0d31e4088ab1e',
+      repo: 'emacoyo.github.io',
+      owner: 'emacoyo',
+      admin: ['emacoyo'],
+      id: location.pathname,      // Ensure uniqueness and length less than 50
+      distractionFreeMode: false  // Facebook-like distraction free mode
+  })
+  gitalk.render('gitalk-container');
+</script>
+
