--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+<title>hello github</title>
+
 <h1>hello github</h1>
 <div id="gitalk-container"></div>
 
