--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   var gitalk = new Gitalk({
       clientID: 'bead3df2199fe5ec763e',
       clientSecret: '2fa88ec78bd3b5a90c0abe8e68f0d31e4088ab1e',
-      repo: 'emacoyo.github.io',
+      repo: 'gitalk',
       owner: 'emacoyo',
       admin: ['emacoyo'],
       id: location.pathname,      // Ensure uniqueness and length less than 50
-      distractionFreeMode: false  // Facebook-like distraction free mode
+      distractionFreeMode: true  // Facebook-like distraction free mode
   })
   gitalk.render('gitalk-container');
 </script>
