--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+
 <title>hello github</title>
 
 <h1>hello github</h1>
+
+<h3>title meta标题必须设置 否则gitalk出现Error Error: Validation Failed, 422</h3>
+"当你用 github 帐号登录（管理员），并且第一次加载该会比较慢，因为第一次加载会自动在你 repo 的仓库下创建对应 issue。
+"
+这句话太有用了... 初始化必须是 管理员先登录,其他用户登录 会显示 Issue was deleted
+
 <div id="gitalk-container"></div>
 
 <script type="text/javascript">
